[project]
name = "qbml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IntensiveRock", email = "froggycham@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "torch>=2.9.0",
]

[project.scripts]
qbml = "qbml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
