[project]
name = "qbml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IntensiveRock", email = "froggycham@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "prettytable>=3.16.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
qmltomography = "qbml.dynamics.runner:main"
qmlvftomo = "qbml.dynamics.varfreqrunner:main"
qmltfp = "qbml.dynamics.predictionrunner:main"
qmlviewer = "qbml.dynamics.viewer:main"
qmlmviewer = "qbml.dynamics.splitrunner:main"
qmltrain = "qbml.ml.train:main"
qbml = "qbml.cli.qbml:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
